--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -7,7 +7,7 @@
 
     /*========== Colors ==========*/
     /* Change favorite color */
-    --hue-color: ; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+    --hue-color: 142 ; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
 
     /* HSL color mode */
     --first-color: #6E57E0;
