swiper added to portfolio section

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -760,7 +760,7 @@ img{
     right: -.5rem;
 }
 
-.swiper-container-horizontal > .swiper-pagination-bullets{
+.swiper-horizontal > .swiper-pagination-bullets{
     bottom: -2.5rem;
 }
 
