--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -591,9 +591,9 @@ img {
   width: 85%;
 } */
 
-/* .skills__figma {
+.skills__figma {
   width: 85%;
-} */
+}
 
 .skills__close .skills__list {
   height: 0px;
@@ -1011,30 +1011,30 @@ img {
 
 /*========== SCROLL UP ==========*/
 .scrollup {
-  position: fixed;
-  right: 1rem;
-  bottom: -20%;
-  background-color: var(--first-color);
-  opacity: .8;
-  padding: 0 .3rem;
-  border-radius: .4rem;
-  z-index: var(--z-tooltip);
-  transition: .4s;
-}
-
-.scrollup:hover {
-  background-color: var(--first-color-alt);
-}
-
-.scrollup__icon {
-  font-size: 1.5rem;
-  color: #FFF;
-}
-
-/* Show scroll */
-.show-scroll {
-  bottom: 5rem;
-}
+    position: fixed;
+    right: 1rem;
+    bottom: -20%;
+    background-color: var(--first-color);
+    opacity: .8;
+    padding: 0 .3rem;
+    border-radius: .4rem;
+    z-index: var(--z-tooltip);
+    transition: .4s;
+  }
+  
+  .scrollup:hover {
+    background-color: var(--first-color-alt);
+  }
+  
+  .scrollup__icon {
+    font-size: 1.5rem;
+    color: #FFF;
+  }
+  
+  /* Show scroll */
+  .show-scroll {
+    bottom: 5rem;
+  }
 
 /*========== SCROLL BAR ==========*/
 ::-webkit-scrollbar {
